tests/errors/matrix_unequal_rows.ki
discard import("matrix").Matrix([[1, 2], [3]])
